--- a/a-propos.html
+++ b/a-propos.html
@@ -22,19 +22,19 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link media="only screen and (max-width: 370px)" rel="alternate" href="http://jafgreenmaroc.com/phone/a-propos.html"/>
   <title>A propos</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=528732068"/>
-  <link rel="stylesheet" type="text/css" href="css/a-propos.css?crc=3780774199" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4154027563"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=103909928"/>
+  <link rel="stylesheet" type="text/css" href="css/a-propos.css?crc=3980100555" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_a-propos.css?crc=536621842"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_a-propos.css?crc=46966021"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/montserrat:n4:default;open-sans:n7,n4:default.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/open-sans:n7,n4:default;montserrat:n4:default.js" type="text/javascript"></script>
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
   <![endif]-->
@@ -56,11 +56,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u5551" href="produits.html" data-href="page:U4525"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5553-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Produits</p></div><div class="grpelem" id="u5554" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --></div></a>
        <div class="SubMenu MenuLevel1 clearfix" id="u5549"><!-- vertical box -->
         <ul class="SubMenuView clearfix colelem" id="u5550"><!-- vertical box -->
-         <li class="MenuItemContainer clearfix colelem" id="u6556"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u6558" href="biostimulants.html" data-href="page:U5063"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u6562-4" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Biostimulants</p></div></a></li>
-         <li class="MenuItemContainer clearfix colelem" id="u6698"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u6699"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u6700-4" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Engrais</p></div></div></li>
-         <li class="MenuItemContainer clearfix colelem" id="u6663"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u6664"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u6665-4" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Correcteurs de carences</p></div></div></li>
-         <li class="MenuItemContainer clearfix colelem" id="u6628"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u6629" href="agents-pollinisateurs.html" data-href="page:U5117"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u6630-4" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Agents polinisateurs</p></div></a></li>
-         <li class="MenuItemContainer clearfix colelem" id="u6592"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u6593" href="formations.html" data-href="page:U5135"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u6594-4" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Formations</p></div></a></li>
+         <li class="MenuItemContainer clearfix colelem" id="u6556"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u6558" href="biostimulants.html" data-href="page:U5063"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u6562-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Biostimulants</p></div></a></li>
+         <li class="MenuItemContainer clearfix colelem" id="u17122"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u17125"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u17127-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>engrais standards</p></div></div></li>
+         <li class="MenuItemContainer clearfix colelem" id="u17178"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u17179"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u17180-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>correcteurs de carrence</p></div></div></li>
+         <li class="MenuItemContainer clearfix colelem" id="u17150"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u17151" href="agents-pollinisateurs.html" data-href="page:U5117"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u17152-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Agents pollinisateurs</p></div></a></li>
         </ul>
        </div>
       </div>
@@ -96,7 +95,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <!-- /m_editable -->
    </div>
-   <div class="verticalspacer" data-offset-top="409" data-content-above-spacer="500" data-content-below-spacer="90" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="387" data-content-above-spacer="500" data-content-below-spacer="112" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
