--- a/contact.html
+++ b/contact.html
@@ -22,19 +22,19 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link media="only screen and (max-width: 370px)" rel="alternate" href="http://jafgreenmaroc.com/phone/contact.html"/>
   <title>Contact</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=528732068"/>
-  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=440429391" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4154027563"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=103909928"/>
+  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=125880277" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_contact.css?crc=3785613044"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_contact.css?crc=82512843"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/source-sans-pro:n4,n7:default;montserrat:n4:default;open-sans:n7,i3,n3,i6:default.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/open-sans:n7,i3,n3,i6:default;montserrat:n4:default;source-sans-pro:n4,n7:default.js" type="text/javascript"></script>
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
   <![endif]-->
@@ -42,7 +42,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <script type="text/javascript">
    var muReCAPTCHA2Instances = {};
 var muReCAPTCHA2OnloadCallback = function() {
-	muReCAPTCHA2Instances['widgetu12876'] = grecaptcha.render('widgetu12876_recaptcha2', {"type":"image","theme":"light","size":"normal","sitekey":"6LdPuT4UAAAAAEsySh5GFXF_-oRg9MVuIJwnJscF"});
+	muReCAPTCHA2Instances['widgetu12876'] = grecaptcha.render('widgetu12876_recaptcha2', {"type":"image","theme":"light","sitekey":"6LdPuT4UAAAAAEsySh5GFXF_-oRg9MVuIJwnJscF","size":"normal"});
 };
 </script>
    </head>
@@ -63,11 +63,10 @@ var muReCAPTCHA2OnloadCallback = function() {
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u5551" href="produits.html" data-href="page:U4525"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5553-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Produits</p></div><div class="grpelem" id="u5554" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --></div></a>
        <div class="SubMenu MenuLevel1 clearfix" id="u5549"><!-- vertical box -->
         <ul class="SubMenuView clearfix colelem" id="u5550"><!-- vertical box -->
-         <li class="MenuItemContainer clearfix colelem" id="u6556"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u6558" href="biostimulants.html" data-href="page:U5063"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u6562-4" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Biostimulants</p></div></a></li>
-         <li class="MenuItemContainer clearfix colelem" id="u6698"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u6699"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u6700-4" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Engrais</p></div></div></li>
-         <li class="MenuItemContainer clearfix colelem" id="u6663"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u6664"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u6665-4" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Correcteurs de carences</p></div></div></li>
-         <li class="MenuItemContainer clearfix colelem" id="u6628"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u6629" href="agents-pollinisateurs.html" data-href="page:U5117"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u6630-4" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Agents polinisateurs</p></div></a></li>
-         <li class="MenuItemContainer clearfix colelem" id="u6592"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u6593" href="formations.html" data-href="page:U5135"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u6594-4" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Formations</p></div></a></li>
+         <li class="MenuItemContainer clearfix colelem" id="u6556"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u6558" href="biostimulants.html" data-href="page:U5063"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u6562-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Biostimulants</p></div></a></li>
+         <li class="MenuItemContainer clearfix colelem" id="u17122"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u17125"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u17127-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>engrais standards</p></div></div></li>
+         <li class="MenuItemContainer clearfix colelem" id="u17178"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u17179"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u17180-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>correcteurs de carrence</p></div></div></li>
+         <li class="MenuItemContainer clearfix colelem" id="u17150"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u17151" href="agents-pollinisateurs.html" data-href="page:U5117"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u17152-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Agents pollinisateurs</p></div></a></li>
         </ul>
        </div>
       </div>
@@ -163,7 +162,7 @@ var muReCAPTCHA2OnloadCallback = function() {
      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3297.656214853063!2d-6.585946684779557!3d34.25731498055051!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzTCsDE1JzI2LjMiTiA2wrAzNScwMS41Ilc!5e0!3m2!1sen!2sma!4v1561895332950!5m2!1sen!2sma" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="1001" data-content-above-spacer="1000" data-content-below-spacer="45" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="979" data-content-above-spacer="978" data-content-below-spacer="45" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
