--- a/gallerie.html
+++ b/gallerie.html
@@ -16,8 +16,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   
   <title>Gallerie</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4154027563"/>
   <link rel="stylesheet" type="text/css" href="css/gallerie.css?crc=4193191577" id="pagesheet"/>
+  <!-- JS includes -->
+  <!--[if lt IE 9]>
+  <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
+  <![endif]-->
    </head>
  <body>
 
