--- a/phone/gallerie.html
+++ b/phone/gallerie.html
@@ -11,23 +11,87 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "gallerie.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "require.js", "gallerie.css"], "outOfDate":[]};
 </script>
   
   <link rel="canonical" href="http://jafgreenmaroc.com/gallerie.html"/>
   <title>Gallerie</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=4154027563"/>
-  <link rel="stylesheet" type="text/css" href="css/gallerie.css?crc=62426684" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=439114611"/>
+  <link rel="stylesheet" type="text/css" href="css/gallerie.css?crc=4278197533" id="pagesheet"/>
+  <!-- Other scripts -->
+  <script type="text/javascript">
+   var __adobewebfontsappname__ = "muse";
+</script>
   <!-- JS includes -->
+  <script src="https://webfonts.creativecloud.com/montserrat:n4:default;open-sans:n7:default.js" type="text/javascript"></script>
   <!--[if lt IE 9]>
   <script src="../scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
   <![endif]-->
    </head>
  <body>
 
-  <div class="clearfix borderbox" id="page"><!-- column -->
-   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="0" data-content-below-spacer="570" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+  <div class="clearfix borderbox" id="page"><!-- group -->
+   <div class="clearfix grpelem" id="pu15639"><!-- group -->
+    <div class="clearfix grpelem" id="u15639"><!-- group -->
+     <div class="clearfix grpelem" id="u15342"><!-- group -->
+      <div class="PamphletWidget clearfix allow_click_through grpelem" id="pamphletu15549" data-visibility="changed" style="visibility:hidden" data-islightbox="true"><!-- none box -->
+       <div class="position_content widget_invisible" id="pamphletu15549_position_content">
+        <div class="ThumbGroup clearfix colelem" data-col-pos="0" id="u15561"><!-- none box -->
+         <div class="popup_anchor allow_click_through grpelem" data-col-pos="0" id="u15562popup">
+          <div class="Thumb popup_element clearfix" data-col-pos="0" id="u15562"><!-- column -->
+           <div class="position_content" data-col-pos="0" id="u15562_position_content">
+            <div class="colelem" id="u15603"><!-- simple frame --></div>
+            <div class="colelem" id="u15609"><!-- simple frame --></div>
+            <div class="colelem" id="u15612"><!-- simple frame --></div>
+           </div>
+          </div>
+         </div>
+        </div>
+        <div class="clearfix colelem" id="pu15554"><!-- group -->
+         <div class="popup_anchor allow_click_through grpelem" data-col-pos="1" id="u15554popup" data-lightbox="true">
+          <div class="ContainerGroup clearfix" data-col-pos="1" id="u15554"><!-- stack box -->
+           <div class="Container invi clearfix grpelem" data-col-pos="0" id="u15559"><!-- group -->
+            <nav class="MenuBar clearfix grpelem" id="menuu15346"><!-- vertical box -->
+             <div class="MenuItemContainer clearfix colelem" id="u15389"><!-- horizontal box -->
+              <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u15390" href="produits.html" data-href="page:U15028"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15391-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>Produits</p></div></a>
+             </div>
+             <div class="MenuItemContainer clearfix colelem" id="u15403"><!-- horizontal box -->
+              <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u15404" href="a-propos.html" data-href="page:U15244"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15405-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>A propos</p></div></a>
+             </div>
+             <div class="MenuItemContainer clearfix colelem" id="u15396"><!-- horizontal box -->
+              <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox clearfix grpelem" id="u15399" href="gallerie.html" data-href="page:U15280"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15401-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>Gallerie</p></div></a>
+             </div>
+             <div class="MenuItemContainer clearfix colelem" id="u15615"><!-- horizontal box -->
+              <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix grpelem" id="u15618" href="contact.html" data-href="page:U15316"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15619-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>Contact</p></div></a>
+             </div>
+            </nav>
+           </div>
+          </div>
+         </div>
+         <div class="popup_anchor allow_click_through grpelem" data-col-pos="4" id="u15565popup">
+          <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix" data-col-pos="4" id="u15565"><!-- group -->
+           <div class="clip_frame grpelem" id="u15645"><!-- image -->
+            <img class="block" id="u15645_img" src="../images/close-u16520-fr2.png?crc=3845982916" alt="" data-heightwidthratio="1" data-image-width="58" data-image-height="58"/>
+           </div>
+          </div>
+         </div>
+        </div>
+       </div>
+      </div>
+     </div>
+    </div>
+    <a class="nonblock nontext clearfix grpelem" id="u15345-4" href="../index.html?devicelock=desktop" data-href="page:U93" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content --><p>jafgREEN mAROC</p></a>
+   </div>
+   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="70" data-content-below-spacer="45" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="browser_width grpelem" id="u15343-bw">
+    <div class="clearfix" id="u15343"><!-- group -->
+     <div class="clearfix grpelem" id="u15410-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-IBE-flags="txtStyleSrc"><!-- content -->
+      <p>site en cours de construction</p>
+     </div>
+    </div>
+   </div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -40,11 +104,16 @@ var suppressMissingFileError = false
 l[1]:null,l=l&&l[2]?l[2]:null;switch(l.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.className+=" "+k;k=a(c(f,"color"));l=a(c(f,"backgroundColor"));k!=0||l!=0?(Muse.assets.required.splice(h,1),"undefined"!=typeof b[i]&&(k!=b[i]>>>24||l!=(b[i]&16777215))&&Muse.assets.outOfDate.push(i)):h++;f.className="version";break;case "js":h++;break;default:throw Error("Unsupported file type: "+l);}}d?d().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 f.parentNode.removeChild(f);if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="Some files on the server may be missing or incorrect. Clear browser cache and try again. If the problem persists please contact website author.",g&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),g&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(f+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(f)):alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
 setTimeout(function(){g(!0)},5E3):g()}};
-var muse_init=function(){require.config({baseUrl:"../"});require(["jquery","museutils","whatinput","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:"../"});require(["jquery","museutils","whatinput","jquery.watch","jquery.musemenu","webpro","musewpslideshow","jquery.museoverlay","touchswipe"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
+Muse.Utils.resizeHeight('.popup_anchor.allow_click_through');/* resize height */
+Muse.Utils.resizeHeight('.browser_width');/* resize height */
+Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
+Muse.Utils.initWidget('.MenuBar', ['#bp_infinity'], function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
+Muse.Utils.initWidget('#pamphletu15549', ['#bp_infinity'], function(elem) { return new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'lightbox',event:'click',deactivationEvent:'none',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:true,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false,isResponsive:true}); });/* #pamphletu15549 */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
